[project]
name = "sub-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openrouter>=0.2.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
]
